tests/baselines/reference/privacyCheckTypeOfFunction.errors.txt
==== tests/cases/compiler/privacyCheckTypeOfFunction.ts (2 errors) ====
    function foo() {
    }
    export var x: typeof foo;
               ~~~~~~~~~~~~~
!!! privacyCheckTypeOfFunction.ts(3,12): error TS2027: Exported variable 'x' has or is using private type 'foo'.
    export var b = foo;
               ~~~~~~~
!!! privacyCheckTypeOfFunction.ts(4,12): error TS2027: Exported variable 'b' has or is using private type 'foo'.
    